--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.3.28",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
     "react": "^18",
